--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button id="play-game">Play</button>
     
     <div class="wrapper">
-        <div class="grid">
+        <div class="grid" class="cat">
         </div>
     </div>
     
