add win/loose logic and update message rendering

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <span>Score: <span id="score">0</span></span>
     </div>
     
-    <div class="message">message</div>
+    <div class="message"></div>
     <button id="play-game">Play</button>
     
     <div class="wrapper">
