--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="scripts/app.js"></script>
     <title>Whack a Cat</title>
 </head>
+
 <body>
     <p>Whack a Cat</p>
     <div class="status-bar">
@@ -16,6 +18,23 @@
 
     <div class="message"></div>
     <button id="play-game">Play</button>
+    <div class="play-container">
+        <button id="how-to-play-btn" class="how-to-btn" title="How to Play?">?</button>
+    </div>
+
+    <div id="how-to-play" class="how-to-play-popup">
+        <div class="how-to-play-content">
+            <h3 id="howToPlayTitle">How to Play</h3>
+            <ul>
+                <li>Click on cats as fast as you can.</li>
+                <li>Avoid clicking dogs — it pauses the game!</li>
+                <li>Reach 15 hits before time runs out to win.</li>
+                <li>Choose difficulty to speed up the game.</li>
+            </ul>
+            <button id="close-how-to" class="close-btn" aria-label="Close How to Play">Close</button>
+        </div>
+    </div>
+
 
     <div class="wrapper">
         <div class="grid" class="cat" class="dog" class="freez-cursor">
@@ -28,4 +47,5 @@
         <button id="hard" class="level-btn">Hard</button>
     </div>
 </body>
+
 </html>
