--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <div class="grid" class="cat" class="dog" class="freez-cursor">
             </div>
         </div>
-        <div class="level-btns" class="hidden">
-            <button id="easy" class="level-btn" class="hidden">Easy</button>
-            <button id="medium" class="level-btn" class="hidden">Medium</button>
-            <button id="hard" class="level-btn" class="hidden">Hard</button>
+        <div class="level-btns">
+            <button id="easy" class="level-btn" >Easy</button>
+            <button id="medium" class="level-btn" >Medium</button>
+            <button id="hard" class="level-btn" >Hard</button>
         </div>
     </section>
 </body>
