--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/main.css">
-    <script src="scripts/app.js"></script>
+    <link rel="stylesheet" href="./styles/main.css">
+    <script src="./scripts/app.js"></script>
     <title>Whack a Cat</title>
 </head>
 
